Estilização da segunda seção finalizada

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             <button>Ler mais</button>
         </section>
 
-        <section>
+        <section class="segunda-secao">
             <h2>Novo</h2>
 
-            <div>
+            <div class="mbp">
                 <h3>Hidrogênio VS Carros Elétricos</h3>
                 <p>Os carros movidos a hodrogenio alguma vez alcançarão os veiculos eletricos? </p>
             </div>
 
-            <div>
+            <div class="mbp">
                 <h3>A arte gerada por IA</h3>
                 <p>Quais são os possiveis efeitos adversos da geração de imagens poe IA sob</p>
             </div>
