Finalização da responsividade para o desktop

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
 
             <h1>O futuro brilhante da web 3.0?</h1>
 
-            <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das
+           <div>
+              <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das
                 pessoas. Mas será que ela realmente está cumprido sua promessa ?</p>
-            <button>Ler mais</button>
+              <button>Ler mais</button>
+           </div>
         </section>
 
         <section class="segunda-secao">
@@ -86,7 +88,7 @@
 
                 <div>
                     <strong>01</strong>
-                    <h2>Rvivendo PCs antigos</h2>
+                    <h2>Revivendo PCs antigos</h2>
                     <p>E se PCs antigos pudessem receber peças modernas?</p>
                 </div>
 
